--- a/views/contatos/edit.ejs
+++ b/views/contatos/edit.ejs
@@ -3,7 +3,7 @@
 	<h2>Ntalk - Editar contato</h2>
 </header>
 <section class="row-fluid text-center">
-	<form action="/contato/<%- id %>?_method=put" method="post" class="well form-inline">
+	<form action="/contato/<%- contato._id %>?_method=put" method="post" class="well form-inline">
 		<label>Nome:</label>
 		<input type="text" name="contato[nome]"
 		value="<%- contato.nome %>" class="input-medium">
