--- a/views/server-error.ejs
+++ b/views/server-error.ejs
@@ -1,12 +1,12 @@
 <% include header %>
 <header>
-	<h1>Ntalk</h1>
-	<h4>Aconteceu algo terrível! :(</h4>
+  <h1>Ntalk</h1>
+  <h4>Aconteceu algo terrível! :(</h4>
 </header>
 <p>
-	Veja os detalhes do erro:
-	<br>
-	<%- error.message %>
+  Veja os detalhes do erro:
+  <br />
+  <%- error.message %>
 </p>
-<hr>
-<p>Que tal voltar <a
+<hr />
+<p>Que tal voltar <a</p>
