--- a/views/contatos/show.ejs
+++ b/views/contatos/show.ejs
@@ -1,17 +1,19 @@
 <% include ../header %>
 <header class="row-fluid text-center">
-	<h2>Ntalk - Dados do contato</h2>
+  <h2>Ntalk - Dados do contato</h2>
 </header>
-<section  class="row-fluid text-center">
-	<form action="/contato/<%- contato._id %>?_method=delete"
-		method="post" class="well form-inline">
-		<label>Nome:</label>
-		<span class="input-medium uneditable-input"><%- contato.nome %></span>
-		<label>E-mail:</label>
-		<span class="input-medium uneditable-input"><%- contato.email %></span>
-		<a href="/contato/<%- contato._id %>/editar" class="btn btn-info">Editar</a>
-		<button type="submit" class="btn btn-danger">Excluir</button>
-	</form>
+<section class="row-fluid text-center">
+  <form
+    action="/contato/<%- contato._id %>?_method=delete"
+    method="post"
+    class="well form-inline"
+  >
+    <label>Nome:</label>
+    <span class="input-medium uneditable-input"><%- contato.nome %></span>
+    <label>E-mail:</label>
+    <span class="input-medium uneditable-input"><%- contato.email %></span>
+    <a href="/contato/<%- contato._id %>/editar" class="btn btn-info">Editar</a>
+    <button type="submit" class="btn btn-danger">Excluir</button>
+  </form>
 </section>
-<% include ../exit %>
-<% include ../footer %>
+<% include ../exit %> <% include ../footer %>
