--- a/views/header.ejs
+++ b/views/header.ejs
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="utf-8">
+    <meta charset="utf-8" />
     <title>Ntalk - Agenda de contatos</title>
-    <link rel='stylesheet' href='/stylesheets/style.css' />
+    <link rel="stylesheet" href="/stylesheets/style.css" />
     <script src="/javascripts/zepto.min.js"></script>
   </head>
   <body>
     <div class="container-fluid">
-<div class="clearfix hero-unit">
+      <div class="clearfix hero-unit"></div>
+    </div>
+  </body>
+</html>
